fixes #65 * added classes to controls dealing with measurements * added css rules to style measurements and add 'cm' behind control

--- a/src/resources/css/edep-theme2.css
+++ b/src/resources/css/edep-theme2.css
@@ -415,6 +415,20 @@ fieldset control{
     margin: 0;
 }
 
+.measurement{
+    position:relative;
+    width:26rem;
+}
+.measurement::after{
+    content:'cm';
+    position:absolute;
+    right:1rem;
+}
+.measurement input{
+    width:5rem;
+    text-align:right;
+}
+
 fx-control, fx-output, .nested-repeat fieldset legend {
     display: grid;
     grid-template-columns: 16rem 1rem 1fr;
